--- a/src/app.html
+++ b/src/app.html
@@ -5,9 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" crossorigin="anonymous">
-		<link rel="stylesheet" href="/assets/css/animate.min.css">
-		<link rel="stylesheet" href="/assets/css/font-awesome.css">
-		<link rel="stylesheet" href="/assets/css/ropa-sans.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/assets/css/animate.min.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/assets/css/font-awesome.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/assets/css/ropa-sans.css">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
